Fixed issue that required field groups with buttons to contain an extra dic

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -372,6 +372,7 @@ input[class*="dob-"] {
     }
     button {
         .ie(padding,0 1em);
+        display: inline-block;
     }
     *:first-child {
         border-radius: @form-border-radius 0 0 @form-border-radius;
