--- a/libs/jade/cookie-monster.jade
+++ b/libs/jade/cookie-monster.jade
@@ -8,7 +8,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Modules", href: "index.html#modules"}, 
+		{title: "Modules", href: "index.html#modules"},
 		{title: "Cookie Monster"}])
 
 block sidebar
@@ -17,7 +17,7 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Cookie monster appears attached to the bottom of the screen.
+			p The cookie monster appears attached to the bottom of the screen. Once a user dismisses it with the close button it shouldn't reappear until the cookie has expired or been removed.
 			.example-box-plain
 				.cookie-monster.hide-no-cookies.hide-no-js.no-print(style="position:relative;z-index:0;")
 					.cookie-monster__content
