--- a/libs/jade/notice.jade
+++ b/libs/jade/notice.jade
@@ -16,7 +16,7 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Notices appear attached to the bottom of the screen and cannot be dismissed.
+			p Notices appear attached to the bottom of the screen and cannot be dismissed. Because these cannot be dismissed they may become annoying, meaning they should be used as infrequently as possible.
 			.example-box-plain
 				.notice(style="position:relative;z-index:0;display:block;")
 					.notice__content
