Missing arrow link

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -230,7 +230,7 @@
 @i-inbox: 					"\e618";
 @i-redo: 					"\f01e";
 @i-left: 					"\e604";
-@i-right: 					"\e608";
+@i-right: 					"\e5f0";
 @i-angle-double-left: 		"\f100";
 @i-angle-double-right: 		"\f101";
 @i-angle-left: 				"\f104";
