Some small style fixes for buttons that was causing rounded edges and bolding to not show on a buttons

--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -12,6 +12,8 @@
     padding: @box-spacing-vertical @box-spacing-horizontal;
     margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
     display: inline-block;
+    border-radius: @form-border-radius;
+    font-weight: @font-weight-bold;
     &:hover,
     &:focus,
     &:active {
@@ -36,6 +38,8 @@
     font-size: @font-size-small;
     color: @heritage-blue;
     background-color: @white;
+    border-radius: @form-border-radius;
+    font-weight: @font-weight-bold;
     &:hover,
     &:active,
     &:focus  {
