Changed buttons to small

--- a/libs/jade/extent.jade
+++ b/libs/jade/extent.jade
@@ -32,11 +32,11 @@ block content
 
 			.extent-selection-desktop
 				div
-					a.btn.btn-primary.extent-selection(href="?lang=en-GB") England
-					a.btn.btn-primary.extent-selection(href="?lang=en-NIR") Northern Ireland
-					a.btn.btn-primary.extent-selection(href="?lang=en-SCT") Scotland
-					a.btn.btn-primary.extent-selection(href="?lang=en-WLS") Wales
-					a.btn.btn-primary.extent-selection(href="?lang=cy") Cymru
+					a.btn.btn-small(href="?lang=en-GB") England
+					a.btn.btn-small(href="?lang=en-NIR") Northern Ireland
+					a.btn.btn-small(href="?lang=en-SCT") Scotland
+					a.btn.btn-small(href="?lang=en-WLS") Wales
+					a.btn.btn-small(href="?lang=cy") Cymru
 
 		footer.dialog__footer
 
