Created page for cab-icons

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1029,3 +1029,667 @@ div.tooltip:before {
         margin: 0 auto;
     }
 }
+
+// Icons page
+.iconlist {
+    .i-key {
+        .icon:before {
+            content: @i-key;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-undo {
+        .icon:before {
+            content: @i-undo;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-target {
+        .icon:before {
+            content: @i-target;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-help {
+        .icon:before {
+            content: @i-help;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-search {
+        .icon:before {
+            content: @i-search;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-email {
+        .icon:before {
+            content: @i-email;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-star {
+        .icon:before {
+            content: @i-star;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-star-o {
+        .icon:before {
+            content: @i-star-o;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-tick {
+        .icon:before {
+            content: @i-tick;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-cross {
+        .icon:before {
+            content: @i-cross;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-bin {
+        .icon:before {
+            content: @i-bin;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-inbox {
+        .icon:before {
+            content: @i-inbox;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-redo {
+        .icon:before {
+            content: @i-redo;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-left {
+        .icon:before {
+            content: @i-left;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-right {
+        .icon:before {
+            content: @i-right;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-angle-double-left {
+        .icon:before {
+            content: @i-angle-double-left;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-angle-double-right {
+        .icon:before {
+            content: @i-angle-double-right;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-angle-left {
+        .icon:before {
+            content: @i-angle-left;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-angle-right {
+        .icon:before {
+            content: @i-angle-right;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-plus-circle {
+        .icon:before {
+            content: @i-plus-circle;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-minus-circle {
+        .icon:before {
+            content: @i-minus-circle;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-plus {
+        .icon:before {
+            content: @i-plus;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-minus {
+        .icon:before {
+            content: @i-minus;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-exclamation-circle {
+        .icon:before {
+            content: @i-exclamation-circle;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-exclamation-triangle {
+        .icon:before {
+            content: @i-exclamation-triangle;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-bubble {
+        .icon:before {
+            content: @i-bubble;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-up {
+        .icon:before {
+            content: @i-up;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-down {
+        .icon:before {
+            content: @i-down;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-external-link {
+        .icon:before {
+            content: @i-external-link;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-megaphone {
+        .icon:before {
+            content: @i-megaphone;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-menu {
+        .icon:before {
+            content: @i-menu;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-right-small {
+        .icon:before {
+            content: @i-right-small;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-sort {
+        .icon:before {
+            content: @i-sort;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-sort-desc {
+        .icon:before {
+            content: @i-sort-desc;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-sort-asc {
+        .icon:before {
+            content: @i-sort-asc;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc {
+        .icon:before {
+            content: @i-doc;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-pdf {
+        .icon:before {
+            content: @i-doc-pdf;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-word {
+        .icon:before {
+            content: @i-doc-word;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-excel {
+        .icon:before {
+            content: @i-doc-excel;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-powerpoint {
+        .icon:before {
+            content: @i-doc-powerpoint;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-image {
+        .icon:before {
+            content: @i-doc-image;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-zip {
+        .icon:before {
+            content: @i-doc-zip;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-audio {
+        .icon:before {
+            content: @i-doc-audio;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-video {
+        .icon:before {
+            content: @i-doc-video;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-doc-code {
+        .icon:before {
+            content: @i-doc-code;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-whatsapp {
+        .icon:before {
+            content: @i-whatsapp;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-copy {
+        .icon:before {
+            content: @i-copy;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-clock {
+        .icon:before {
+            content: @i-clock;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-print {
+        .icon:before {
+            content: @i-print;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-save {
+        .icon:before {
+            content: @i-save;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-load {
+        .icon:before {
+            content: @i-load;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-happy {
+        .icon:before {
+            content: @i-happy;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-help {
+        .icon:before {
+            content: @i-help;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-exit {
+        .icon:before {
+            content: @i-exit;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-new-window {
+        .icon:before {
+            content: @i-new-window;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-google {
+        .icon:before {
+            content: @i-google;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-facebook {
+        .icon:before {
+            content: @i-facebook;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-twitter {
+        .icon:before {
+            content: @i-twitter;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-undo {
+        .icon:before {
+            content: @i-undo;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+    .i-zws {
+        .icon:before {
+            content: @i-zws;
+            .icon;
+        }
+        .variable,
+        .unicode {
+            font-family: monaco,monospace;
+        }
+    }
+
+}
