--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -25,6 +25,8 @@ block content
 					li
 						a(href="colours.html") Colours
 					li
+						a(href="icons.html") Icons
+					li
 						a(href="tables.html") Tables
 					li
 						a(href="new-grid.html") New grid layout
