--- a/libs/template/sidebar-styles.jade
+++ b/libs/template/sidebar-styles.jade
@@ -2,6 +2,7 @@
 +sidebar([
 	{title: "Typography", href: "typography.html"},
 	{title: "Colours", href: "colours.html"},
+	{title: "Icons", href: "icons.html"},
 	{title: "Tables", href: "tables.html"},
 	{title: "Buttons", href: "buttons.html"},
 	{title: "Fields", href: "fields.html"},
