--- a/libs/jade/collapse.jade
+++ b/libs/jade/collapse.jade
@@ -7,7 +7,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Modules", href: "index.html#modules"}, 
+		{title: "Modules", href: "index.html#modules"},
 		{title: "Collapse"}])
 
 block sidebar
@@ -16,6 +16,9 @@ block sidebar
 block content
 	.articleContent
 		div
+			p Collapsible sections allow you to hide content that isn’t applicable to most people on the page, but will still be important to some. This is a great way of making the page more succinct and easier to scan. A good example of usage is when you have a selection of content headings, where the user will only want some depending on their situation.
+
+			p Keep in mind collapsed content can also be very easy for users to miss, so they should be used sparingly or only with a good reason.
 			.example-box-plain
 				.collapse.collapsible
 					.collapse-toggle Unstyled content inside header/toggle
@@ -56,44 +59,6 @@ block content
 					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
-
-			.example-box-plain
-				.collapse.collapsible
-					.collapse-toggle
-						h2 H2 Heading
-						p Heading toggle can also contain formatted html.
-					.collapse-content
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.collapse-toggle-close Close
-			pre
-				code.language-html
-					| &lt;div class="collapse collapsible"&gt;
-					| 	&lt;div class="collapse-toggle"&gt;
-					| 		&lt;h2&gt;H2 Heading&lt;/h2&gt;
-					| 		&lt;p&gt;Heading toggle can also contain formatted html.&lt;/p&gt;
-					| 	&lt;/div&gt;
-					| 	&lt;div class="collapse-content"&gt;
-					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
-					| 	&lt;/div&gt;
-					| &lt;/div&gt;
-
-			//.example-box-plain
-				.collapse.collapsible--red
-					.collapse-toggle Unstyled content inside header/toggle
-					.collapse-content
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.collapse-toggle-close Close
-			//pre
-				code.language-html
-					| &lt;div class="collapse collapsible--red"&gt;
-					| 	&lt;div class="collapse-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
-					| 	&lt;div class="collapse-content"&gt;
-					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
-					| 	&lt;/div&gt;
-					| &lt;/div&gt;
-
 
 			h2 Existing syntax
 			.example-box-plain
