Update pagination lists style

--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -1,5 +1,5 @@
 block settings
-    - var title = "Search results"
+    - var title = "Citizens Advice digital blog"
     - var sidebar = true
     - var toolbars = false
     //- var cookiemonster = true
@@ -9,9 +9,7 @@ extends ../template/template.jade
 
 block breadcrumbs
     +breadcrumbs([
-        {title: "Home", href: "index.html"},
-        {title: "Templates", href: "index.html#templates"},
-        {title: "Content"}])
+        {title: "Home"}])
 
 //block sidebar
     - var section = "Before you claim PIP"
