--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -17,22 +17,6 @@ li {
     margin-bottom:  (@line-height-computed * 0.5);
 }
 
-ul.navbar-nav li {
-    font-size:          @font-size-base;
-    line-height:        @line-height-base;
-    font-weight:        @font-weight-base;
-    margin:             0;
-}
-
-
-ol li,
-ul li {
-    font-size:          @font-size-base;
-    line-height:        @line-height-base;
-    font-weight:        @font-weight-base;
-    margin:             0 0 (@paragraph-margin-bottom / 2) 0;
-}
-
 li > ul,
 li > ol {
     margin-top: (@line-height-computed * 0.5);
@@ -230,13 +214,20 @@ li > ol {
     margin: @box-spacing 0;
     padding: 0;
     overflow: hidden;
+    font-weight: @font-weight-bold;
     & > li {
         display: inline;
         &.active {
             cursor: default;
             & > span {
                 background-color: @heritage-blue;
+                border: 1px solid @heritage-blue;
+                border-radius: @form-border-radius;
+                font-weight: @font-weight-bold;
             }
+        }
+        &:last-of-type a {
+            background-color: @white;
         }
         & > a, & > span {
             text-decoration: none;
@@ -247,8 +238,13 @@ li > ol {
             margin: 0 .5em .5em 0;
         }
         & > a {
-            &:hover, &:focus, &:active {
+            border-radius: @form-border-radius;
+            background-color: @heritage-blue-lightest;
+            color: @heritage-blue;
+            border: 1px solid @heritage-blue;
+                &:hover, &:focus, &:active {
                 background-color: @heritage-blue;
+                color: @white;
             }
         }
         &.pagination--dot {
