Removed float left

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -5,7 +5,7 @@
  */
 
 .main-content__sidebar {
-	float: left;
+	//float: left;
 	//clear: left;
 	width: @width-span-4;
 	overflow: hidden; // Stop margin collapsing issues
