--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -319,8 +319,8 @@
 // Burger icon
 .icon-menu:before {
     content: @i-menu;
-    &:extend(.icon);
-    font-style: normal;
+    .icon;
+    padding-right: .5rem;
 }
 
 /*
