Added vertical dots icon

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -275,4 +275,5 @@
 @i-facebook: 				"\e60c";
 @i-twitter: 				"\e60d";
 @i-undo:                    "\e626";
+@i-vertical-dots:			"\e901";
 @i-zws: 					"_";
