Added mobile button to sidebar

--- a/libs/template/mixins.jade
+++ b/libs/template/mixins.jade
@@ -16,6 +16,7 @@ mixin breadcrumbs(obj)
 mixin sidebar(obj, key)
 	nav.side-nav-beta
 		ul
+			li.side-nav-beta__button In this section
 			li.side-nav-beta__heading.-active.-open
 				a
 					span #{section}
