--- a/libs/jade/sidebar.jade
+++ b/libs/jade/sidebar.jade
@@ -24,15 +24,39 @@ block sidebar
         {title: "Preparing for your PIP assessment"},
         {title: "Changes that affect your PIP"}
         ],0)
-//    - var section = "Sibling categories"
-//    +sidebar([
-//        ])
 
 block section-notice
     aside.section-notice
         h2.screenreader Notice
         .section-notice__content
             p #[span.badge NEW] This page is part of #[a(href="#") our new approach to digital advice].
+
+block script
+    script.
+        jQuery(function($){
+            // flag to allow clicking
+            var clickAllowed = true;
+
+            // click function
+            $('.side-nav-beta__button').click(function(){
+                if(clickAllowed) {
+                    $('.side-nav-beta__button').parent().parent().toggleClass('expanded');
+                }
+            });
+
+            // check if browser size is compatible with click event
+            onResize = function() {
+                if($(window).width() < 600){
+                    clickAllowed = true;
+                } else {
+                    clickAllowed = false;
+                    $('.side-nav').removeClass('expanded');
+                }
+            }
+
+            $(document).ready(onResize);
+            $(window).bind('resize', onResize);
+        });
 
 block content
     .articleContent
