Fixed bug that showed the button on desktop

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -364,7 +364,7 @@ html[lang="en-SCT"] .side-nav > h2 {
     .side-nav-beta__button {
     	display: none;
 		padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
-		display: block;
+		display: none;
 		border-bottom: none;
 		color: @heritage-blue;
 		font-weight: @font-weight-bold;
