Moved JS into it's own file, then called it in template

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -294,5 +294,6 @@ html
 
 		<!--[if IE 8]></div><![endif]-->
 		script(src="js/advisor.js")
+		script(src="js/sidebar.js")
 		script(src="js/core.js")
 		block script-bottom
