Fixed hover state bug on header search button

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -125,6 +125,8 @@ input.main-header__search__input {
 
 .main-header__search__submit:hover, .main-header__search__submit:focus {
     background: @gray-0;
+    color: @white;
+    border-color: @gray-0;
 }
 
 @media ( max-width: @screen-xs-max ) {
